# ambient-expense-trekker-agy

./: .gitignore  GEMINI.md  Makefile  README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
artifacts/grade_results/: latest_results.html  results_20260619_184527.json
artifacts/traces/: generated_traces.json
expense_agent/: agent.py  agent_runtime_app.py  config.py  fast_api_app.py
scratch/: check_session.py  test_workflow.py
submission_frontend/: Dockerfile  main.py  pyproject.toml
tests/eval/: eval_config.yaml  generate_traces.py  grade_traces.py
tests/eval/datasets/: basic-dataset.json
tests/integration/: test_agent.py
